"Fixed the horizontal scroll issue"

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
 body {
     margin: 0;
     font-size: 0;
+    overflow: hidden;
 }
 
 .loader-wrapper {
