--- a/src/components/About/style.scss
+++ b/src/components/About/style.scss
@@ -14,7 +14,7 @@ img{
     border-right:black solid 0.2vw; 
     border-top: 0;
     display: flex;
-    overflow: visible;
+    overflow: hidden;
     font-weight: 700;
     color: black;
     max-height: 100vh;
@@ -27,6 +27,7 @@ img{
         left: 50vw;
         position: relative;
         margin-bottom: 2vw;
+        
         h2{
             font-family: "Syncopate", sans-serif;
             font-size: 1vw;
@@ -42,6 +43,7 @@ img{
             border-radius: 60px;
             background: black;
             color: white;
+            
         }
         background: white;
         opacity: 0;
@@ -54,6 +56,7 @@ img{
         font-family: 'Bai Jamjuree';
         transform: translate(0);
         border: solid 0.2vw black;
+
         &.is-reveal{
             opacity: 1;
         }
