--- a/src/components/Gallery/style.scss
+++ b/src/components/Gallery/style.scss
@@ -2,6 +2,7 @@
     background: white;
     padding-left: 5vw;
     position: relative;
+    overflow: hidden;
 
     .gallery-heading{
         font-family: "Synacopate", sans-serif;;
