--- a/src/components/Skills/style.scss
+++ b/src/components/Skills/style.scss
@@ -3,7 +3,6 @@
     border-top-width: 0;
     position: relative;
     margin: 0;
-    width: 100vw;
     color: black;
     
     #heading{
